test/sema/imported-module-has-file-scope.delta.output
inputs/imported-module-has-file-scope/foo/a.delta:1:6: warning: unused declaration 'foo'
void foo() { }
     ^
inputs/imported-module-has-file-scope/second-file.delta:2:5: error: unknown identifier 'foo'
    foo()
    ^
